Gateway for Order Service and Identify Service; missing: Auction Service

--- a/src/GatewayService/appsettings.Development.json
+++ b/src/GatewayService/appsettings.Development.json
@@ -2,62 +2,50 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Information"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "IdentityServiceUrl": "http://localhost:5000",
   "AllowedHosts": "*",
   "ReverseProxy": {
     "Routes": {
-      "auctionsRead" : {
-        "ClusterId": "auctions",
+      "ordersRead": {
+        "ClusterId": "orders",
         "Match": {
-          "Path": "/auctions/{**catch-all}",
-          "Method": ["GET"]
+          "Path": "/orders/{**catch-all}",
+          "Methods": [
+            "GET"
+          ]
         },
-        "Transform":[
+        "Transforms": [
           {
-            "PathPattern": "api/auctions/{**catch-all}"
+            "PathPattern": "/api/orders/{**catch-all}"
           }
         ]
       },
-      "auctionsWrite" : {
-        "ClusterId": "auctions",
-        "AuthorizationPolicy": "default",
-        "Match": {
-          "Path": "/auctions/{**catch-all}",
-          "Method": ["POST","PUT","DELETE"]
-        },
-        "Transform":[
-          {
-            "PathPattern": "api/auctions/{**catch-all}"
-          }
-        ]
-      },
-
-      "search" : {
+      "search": {
         "ClusterId": "search",
         "Match": {
           "Path": "/search/{**catch-all}",
-          "Method": ["GET"]
+          "Methods": [
+            "GET"
+          ]
         },
-        "Transform":[
+        "Transforms": [
           {
-            "PathPattern": "api/search/{**catch-all}"
+            "PathPattern": "/api/search/{**catch-all}"
           }
         ]
-      }
-
-    },
-    "Clusters": {
-      "auctions": {
-        "Destinations": {
-          "auctionApi": {
-            "Address": "http://localhost:7001"
-          }
-        }
+        
       },
-
+      "Clusters": {
+        "orders": {
+          "Destinations": {
+            "orderApi": {
+              "Address": "http://localhost:7001"
+            }
+          }
+      },
       "search": {
         "Destinations": {
           "searchApi": {
@@ -66,5 +54,9 @@
         }
       }
     }
+
+      
+    }
+    
   }
 }
