--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@nextui-org/react": "^2.6.11",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
@@ -17,6 +20,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-textarea-autosize": "^8.5.8",
