--- a/src/GatewayService/appsettings.Docker.json
+++ b/src/GatewayService/appsettings.Docker.json
@@ -5,6 +5,7 @@
             "Microsoft.AspNetCore": "Information"
         }
     },
+    "IdentityServiceUrl": "http://identity-svc",
     "ReverseProxy": {
         "Clusters": {
             "auctions": {
