--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
+    "next-auth": "^5.0.0-beta.25",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
