--- a/src/GatewayService/appsettings.Development.json
+++ b/src/GatewayService/appsettings.Development.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "IdentityServiceUrl": "http://localhost:5000",
   "ReverseProxy": {
     "Clusters": {
       "orders": {
