--- a/src/AuctionService/appsettings.Development.json
+++ b/src/AuctionService/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=auctions;Username=postgres;Password=postgrespw"
+  },
+  "IdentityServiceUrl": "http://localhost:5000"
 }
