--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,26 +8,26 @@ services:
     volumes:
       - /var/lib/postgresql/data
     
-#   mongodb:
-#     image: mongo
-#     environment:
-#       - MONGO_INITDB_ROOT_USERNAME=root
-#       - MONGO_INITDB_ROOT_PASSWORD=mongopw
-#     ports:
-#       - 27017:27017
-#     volumes:
-#       - /data/db
-#   rabbitmq:
-#     image: rabbitmq:3-management-alpine
-#     container_name: rabbitmq
-#     ports:
-#       - "5672:5672"
-#       - "15672:15672"
-#     healthcheck:
-#       test: ["CMD", "rabbitmqctl", "status"]
-#       interval: 10s
-#       timeout: 10s
-#       retries: 5
+  mongodb:
+    image: mongo
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=mongopw
+    ports:
+      - 27017:27017
+    volumes:
+      - /data/db
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    healthcheck:
+      test: ["CMD", "rabbitmqctl", "status"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
 #   order-svc:
 #     image: nguyenthanh/order-svc:latest
 #     build: 
