--- a/src/SearchService/Dockerfile
+++ b/src/SearchService/Dockerfile
@@ -10,6 +10,8 @@ COPY src/GatewayService/GatewayService.csproj src/GatewayService/GatewayService.
 COPY src/Contracts/Contracts.csproj src/Contracts/Contracts.csproj
 COPY src/IdentityService/IdentityService.csproj src/IdentityService/IdentityService.csproj
 COPY src/BuyingService/BuyingService.csproj src/BuyingService/BuyingService.csproj
+COPY src/AuctionService/AuctionService.csproj src/AuctionService/AuctionService.csproj
+# COPY src/OrderService/OrderService.csproj src/OrderService/OrderService.csproj
 # Restore package deps
 RUN dotnet restore NT208.P23.sln
 # Copy the app folders 
