--- a/src/GatewayService/appsettings.json
+++ b/src/GatewayService/appsettings.json
@@ -81,6 +81,20 @@
           }
         ]
       },
+      "buyingsConfirm": {
+        "ClusterId": "buyings",
+        "Match": {
+          "Path": "/buyings/confirm-item/{orderId}",
+          "Methods": [
+            "POST"
+          ]
+        },
+        "Transforms": [
+          {
+            "PathPattern": "api/buyings/confirm-item/{orderId}"
+          }
+        ]
+      },
       "buyingsList": {
         "ClusterId": "buyings",
         "Match": {
@@ -137,6 +151,20 @@
           }
         ]
       },
+      "walletsInit": {
+        "ClusterId": "deposits",
+        "Match": {
+          "Path": "/wallets/init/{userId}",
+          "Methods": [
+            "POST"
+          ]
+        },
+        "Transforms": [
+          {
+            "PathPattern": "api/wallets/init/{userId}"
+          }
+        ]
+      },
       "VnPayDeposits": {
         "ClusterId": "deposits",
         "Match": {
@@ -148,6 +176,20 @@
         "Transforms": [
           {
             "PathPattern": "api/vnpay/CreatePaymentUrl"
+          }
+        ]
+      },
+      "sellerDeposit": {
+        "ClusterId": "deposits",
+        "Match": {
+          "Path": "/wallets/seller/deposit/{sellerId}",
+          "Methods": [
+            "POST"
+          ]
+        },
+        "Transforms": [
+          {
+            "PathPattern": "api/wallets/seller/deposit/{sellerId}"
           }
         ]
       },
