--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -180,6 +180,13 @@ services:
       - ASPNETCORE_ENVIRONMENT=Docker
       - ASPNETCORE_URLS=http://+:80
       - ConnectionStrings__DefaultConnection=Server=postgres;User Id=postgres;Password=postgrespw;Database=identity
+      - CLIENTID=${CLIENTID}
+      - CLIENTSECRET=${CLIENTSECRET}
+      - GMAIL=${GMAIL}
+      - APPPASSWORD=${APPPASSWORD}
+      - SENDER=${SENDER}
+      - TWILIO_ACCOUNT_SID=${TWILIO_ACCOUNT_SID}
+      - TWILIO_AUTH_TOKEN=${TWILIO_AUTH_TOKEN}
     ports:
       - 5001:80
     depends_on:
