--- a/frontend/web/Dockerfile
+++ b/frontend/web/Dockerfile
@@ -12,7 +12,7 @@ COPY frontend/web ./
 
 ENV NEXT_TELEMETRY_DISABLED=1
 
-RUN npm run build
+RUN npm run build --no-lint
 
 # production image, copy all files and run next
 FROM node:22-alpine AS runner
