--- a/src/GatewayService/appsettings.json
+++ b/src/GatewayService/appsettings.json
@@ -179,6 +179,34 @@
           }
         ]
       },
+      "VnPayCallback": {
+        "ClusterId": "deposits",
+        "Match": {
+          "Path": "/vnpay/Callback",
+          "Methods": [
+            "GET"
+          ]
+        },
+        "Transforms": [
+          {
+            "PathPattern": "api/vnpay/Callback"
+          }
+        ]
+      },
+      "VnPayIpn": {
+        "ClusterId": "deposits",
+        "Match": {
+          "Path": "/vnpay/IpnAction",
+          "Methods": [
+            "GET"
+          ]
+        },
+        "Transforms": [
+          {
+            "PathPattern": "api/vnpay/IpnAction"
+          }
+        ]
+      },
       "sellerDeposit": {
         "ClusterId": "deposits",
         "Match": {
