--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "next-auth": "^5.0.0-beta.25",
+    "node-fetch": "^3.3.2",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-countdown": "^2.3.6",
