--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -227,4 +227,4 @@ services:
       - 443:443
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
-      - ./cert:/etc/nginx/certs
+      - ./devcerts:/etc/nginx/certs
