--- a/frontend/web/package.json
+++ b/frontend/web/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.12.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.483.0",
+    "moment": "^2.30.1",
     "next": "15.2.3",
     "next-auth": "^5.0.0-beta.25",
     "node-fetch": "^3.3.2",
