--- a/src/WalletService/appsettings.Development.json
+++ b/src/WalletService/appsettings.Development.json
@@ -16,6 +16,7 @@
     "TmnCode": "9S0FUHZO",
     "HashSecret": "16SSHNMXVZX3ZI0JEMBXU5T4PRXUW9P7",
     "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-    "CallbackUrl": "http://localhost:7004/api/Vnpay/Callback"
+    "CallbackUrl": "http://localhost:7004/api/Vnpay/Callback",
+    "IpnUrl": "http://localhost:7004/api/Vnpay/IpnAction"
   }
 }
